# nos-lp-foundations-work

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
life_expectancy/: __init__.py  cleaning.py  data.py  main.py
life_expectancy/data_cleaning/: abstract.py  clean_json.py  clean_tsv.py
life_expectancy/tests/: fixtures_io.py  test_clean_json.py  test_clean_tsv.py  test_cleaning.py  test_data.py
life_expectancy/tests/fixtures/: pt_life_expectancy_expected.csv
